[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panda_express"
version = "0.1.0"
description = "A set of scripted skills based on the bamboo control library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bamboo Development Team"},
]
keywords = ["robotics", "franka", "control", "impedance", "robot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "msgpack",
    "numpy<2.0",
    "pyzmq>=22.0.0",
    "roboticstoolbox-python",
    "opencv-contrib-python==4.11.0.86",
    "google-generativeai",
    "ImageHash",
    "bamboo-franka-controller @ git+https://github.com/chsahit/bamboo.git@swe_mode"
]

[project.optional-dependencies]
server = [
    # Hardware communication for gripper control
    "pyserial>=3.4",
    "pymodbus==2.5.3",
]
dev = [
    # Development tools
    "pre-commit>=3.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chsahit/bamboo_experimental"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bamboo*"]
exclude = ["controller"]


# Development tool configurations
[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
    "third_party/",
    "install/",
    "build/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bamboo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "third_party/",
    "install/",
    "build/",
]
